--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="/FrontEnd/assets/style.css">
+	<link rel="stylesheet" href="FrontEnd/assets/style.css">
 </head>
 <body>
 <header>
@@ -70,6 +70,6 @@
 	</nav>
 </footer>
 
-<script src="/FrontEnd/assets/script.js"></script>
+<script src="FrontEnd/assets/script.js"></script>
 </body>
 </html>
