--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li>login</li>
-			<li><img src="FrontEnd/assets/icons/instagram.png" alt="Instagram"></li>
+			<li><a href="FrontEnd/assets/login.html" class="login-link">login</a></li>
+			<li><img src="FrontEnd/assets/icons/instagram.png" alt="Instagram">
+			</li>
 		</ul>
 	</nav>
 </header>
