--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="/FrontEnd/assets/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -23,8 +23,8 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li><a href="/FrontEnd/assets/login.html" class="login-link">login</a></li>
-			<li><img src="/FrontEnd/assets/icons/instagram.png" alt="Instagram">
+			<li><a href="login.html" class="login-link">login</a></li>
+			<li><img src="icons/instagram.png" alt="Instagram">
 			</li>
 		</ul>
 	</nav>
