--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -15,8 +15,6 @@
 </head>
 <body>
 
-</body>
-</html>
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
@@ -29,3 +27,14 @@
 		</ul>
 	</nav>
 </header>
+
+<footer>
+	<nav>
+		<ul>
+			<li>Mentions Légales</li>
+		</ul>
+	</nav>
+</footer>
+
+</body>
+</html>
