MAJ Intégration page formulaire

--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -28,6 +28,22 @@
 	</nav>
 </header>
 
+<main class="login-container">
+    <h2>Log In</h2>
+
+    <form class="login-form">
+        <label for="email">E-mail</label>
+        <input type="text" name="email" id="email">
+
+        <label for="mdp">Mot de passe</label>
+        <input type="text" name="mdp" id="mdp">
+
+        <button type="submit">Se connecter</button>
+
+        <a href="#">Mot de passe oublié</a>
+    </form>
+</main>
+
 <footer>
 	<nav>
 		<ul>
