MAJ Fonctionnalités formulaire

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li><a href="FrontEnd/assets/login.html" class="login-link">login</a></li>
+			<li><a href="login.html" class="login-link">login</a></li>
 			<li><img src="FrontEnd/assets/icons/instagram.png" alt="Instagram">
 			</li>
 		</ul>
