--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/FrontEnd/assets/style.css">
 </head>
 <body>
 
@@ -22,7 +22,7 @@
 			<li>projets</li>
 			<li>contact</li>
 			<li><a href="login.html" class="login-link">login</a></li>
-			<li><img src="icons/instagram.png" alt="Instagram">
+			<li><img src="/FrontEnd/assets/icons/instagram.png" alt="Instagram">
 			</li>
 		</ul>
 	</nav>
@@ -31,7 +31,7 @@
 <main class="login-container">
     <h2>Log In</h2>
 
-    <form class="login-form">
+    <form class="login-form" id="login-form">
         <label for="email">E-mail</label>
         <input type="text" name="email" id="email">
 
@@ -39,6 +39,7 @@
         <input type="text" name="mdp" id="mdp">
 
         <button type="submit">Se connecter</button>
+        <p id="error-message" style="color: red;"></p>
 
         <a href="#">Mot de passe oublié</a>
     </form>
@@ -51,6 +52,8 @@
 		</ul>
 	</nav>
 </footer>
+
+<script src="/FrontEnd/assets/login.js"></script>
 
 </body>
 </html>
