--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="/FrontEnd/assets/style.css">
+	<link rel="stylesheet" href="FrontEnd/assets/style.css">
 </head>
 <body>
 
@@ -22,7 +22,7 @@
 			<li>projets</li>
 			<li>contact</li>
 			<li><a href="login.html" class="login-link">login</a></li>
-			<li><img src="/FrontEnd/assets/icons/instagram.png" alt="Instagram">
+			<li><img src="FrontEnd/assets/icons/instagram.png" alt="Instagram">
 			</li>
 		</ul>
 	</nav>
@@ -53,7 +53,7 @@
 	</nav>
 </footer>
 
-<script src="/FrontEnd/assets/login.js"></script>
+<script src="FrontEnd/assets/login.js"></script>
 
 </body>
 </html>
