--- a/login.html
+++ b/login.html
@@ -15,6 +15,10 @@
 </head>
 <body>
 
+<!-- CONTENEUR PRINCIPAL -->
+<div class="container">
+
+<!-- HEADER -->
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
@@ -28,9 +32,11 @@
 	</nav>
 </header>
 
+<!-- MAIN - CONTENEUR SECONDAIRE -->
 <main class="login-container">
     <h2>Log In</h2>
 
+<!-- FORMULAIRE -->
     <form class="login-form" id="login-form">
         <label for="email">E-mail</label>
         <input type="text" name="email" id="email">
@@ -45,6 +51,7 @@
     </form>
 </main>
 
+<!-- FOOTER -->
 <footer>
 	<nav>
 		<ul>
@@ -53,7 +60,8 @@
 	</nav>
 </footer>
 
+<!-- SCRIPT JS LINK -->
 <script src="FrontEnd/assets/login.js"></script>
-
+</div>
 </body>
 </html>
