MAJ Ajout photo

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			<i class="fa-regular fa-image" style="color : #B9C5CC" id="upload-logo"></i>
 		</div>
 
-        <label for="photo-file" id="photo-file">+ Ajouter une photo</label>
+        <label for="file-photo" id="photo-file">+ Ajouter une photo</label>
         <input type="file" id="file-photo" name="file-photo" accept="image/*" required>
 
 		<p class="upload-info">jpg, png : 4mo max</p>
@@ -146,7 +146,7 @@
 
 		<hr class="modal-separator">
 
-        <button type="submit">Valider</button>
+        <button type="submit" id="validation-button">Valider</button>
 	</div>
 	</form>
     </div>
