--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<!-- BANNIERE DU HAUT -->
 	<div id="admin-banner" class="hidden">
-  <a href=""><i class="fa-regular fa-pen-to-square"></i> Mode édition</a>
+  <p><i class="fa-regular fa-pen-to-square"></i> Mode édition</p>
 </div>
 
 	<!-- CONTENEUR PRINCIPAL -->
