MAJ bouton ajout photo

--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
         <label for="file-photo" id="photo-file">+ Ajouter une photo</label>
 		<input type="file" id="file-photo" name="image" accept="image/*" required>
 
+		<div id="preview-container">
+  			<img id="image-preview" src="" alt="Aperçu de l’image" style="display: none; max-height: 150px;" />
+		</div>
+
 		<p class="upload-info">jpg, png : 4mo max</p>
 	</div>
 
