--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		<input type="file" id="file-photo" name="image" accept="image/*" required>
 
 		<div id="preview-container">
-  			<img id="image-preview" src="" alt="Aperçu de l’image" style="display: none; max-height: 150px;" />
+  			<img id="image-preview" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Aperçu de l’image" style="display: none; max-height: 150px;">
 		</div>
 
 		<p class="upload-info">jpg, png : 4mo max</p>
@@ -147,7 +147,7 @@
 
 		<label for="photo-category">Catégorie</label>
 		<select id="photo-category" name="category" required>
-		<option value=""></option>
+		<option value="">&nbsp;</option>
 		</select>
 
 		<hr class="modal-separator">
