--- a/login.html
+++ b/login.html
@@ -1,67 +1,71 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
+		rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="FrontEnd/assets/style.css">
 </head>
+
 <body>
 
-<!-- CONTENEUR PRINCIPAL -->
-<div class="container">
+	<!-- CONTENEUR PRINCIPAL -->
+	<div class="container">
 
-<!-- HEADER -->
-<header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-	<nav>
-		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li><a href="login.html" class="login-link">login</a></li>
-			<li><img src="FrontEnd/assets/icons/instagram.png" alt="Instagram">
-			</li>
-		</ul>
-	</nav>
-</header>
+		<!-- HEADER -->
+		<header>
+			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+			<nav>
+				<ul>
+					<li>projets</li>
+					<li>contact</li>
+					<li><a href="login.html" class="login-link">login</a></li>
+					<li><img src="FrontEnd/assets/icons/instagram.png" alt="Instagram">
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-<!-- MAIN - CONTENEUR SECONDAIRE -->
-<main class="login-container">
-    <h2>Log In</h2>
+		<!-- MAIN - CONTENEUR SECONDAIRE -->
+		<main class="login-container">
+			<h2>Log In</h2>
 
-<!-- FORMULAIRE -->
-    <form class="login-form" id="login-form">
-        <label for="email">E-mail</label>
-        <input type="text" name="email" id="email">
+			<!-- FORMULAIRE -->
+			<form class="login-form" id="login-form">
+				<label for="email">E-mail</label>
+				<input type="text" name="email" id="email">
 
-        <label for="mdp">Mot de passe</label>
-        <input type="text" name="mdp" id="mdp">
+				<label for="mdp">Mot de passe</label>
+				<input type="password" name="mdp" id="mdp">
 
-        <button type="submit">Se connecter</button>
-        <p id="error-message" style="color: red;"></p>
+				<button type="submit">Se connecter</button>
+				<p id="error-message" style="color: red;"></p>
 
-        <a href="#">Mot de passe oublié</a>
-    </form>
-</main>
+				<a href="#">Mot de passe oublié</a>
+			</form>
+		</main>
 
-<!-- FOOTER -->
-<footer>
-	<nav>
-		<ul>
-			<li>Mentions Légales</li>
-		</ul>
-	</nav>
-</footer>
+		<!-- FOOTER -->
+		<footer>
+			<nav>
+				<ul>
+					<li>Mentions Légales</li>
+				</ul>
+			</nav>
+		</footer>
 
-<!-- SCRIPT JS LINK -->
-<script src="FrontEnd/assets/login.js"></script>
-</div>
+		<!-- SCRIPT JS LINK -->
+		<script src="FrontEnd/assets/login.js"></script>
+	</div>
 </body>
+
 </html>
